--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "python.pythonPath": "/home/jmerten/anaconda3/envs/pymfree/bin/python"
+    "python.pythonPath": "/home/jmerten/anaconda3/envs/pymfree/bin/python",
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true,
+    "python.linting.banditEnabled": false
 }
