Started with PEP compliance and functionals.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "python.pythonPath": "/home/jmerten/anaconda3/envs/pymfree/bin/python",
-    "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
-    "python.linting.enabled": true,
-    "python.linting.banditEnabled": false
+    "editor.rulers": [
+        80
+    ],
+    "python.linting.pylintEnabled": false,
+    "python.linting.enabled": true
 }
